# Cycling-Manager

./: .gitignore  Makefile  README.md  publish_public_app.sh  pyproject.toml  streamlit_app.py
data/giro_snapshot_latest/: giro_rider_browser.csv  giro_rider_results.csv  giro_scoring_rules.csv  metadata.json
data/snapshot_latest/: current_startlist.csv  manager_riders_enriched.csv  metadata.json  race_history_rankings.csv  startlist_changes.csv
giro/: README.md  __init__.py  ingest_holdet.py  mapping.py  pcs_history.py  pcs_history_status.py  schema.sql  snapshot.py  ui.py  update_pcs_rider_id.py
